--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -15,7 +15,7 @@ staff:
   netid: "kfindley"
   role: "prof"
   bio: >-
-    Kelly's Bio here
+    Hey folks! I'm Kelly Findley, and I'll be the STAT 100 instructor for the 10am class this semester. I have a Masters degree in Statistics and a PhD in Curriculum and Instruction because I really enjoy finding creative ways to teach statistics. I also enjoy teaching statistics to non-majors because I love introducing students to statistics for the first time!  I'm new to UIUC this year, as I just graduated from Florida State University last Spring. But I love the snow and I love the seasons! In addition to teaching, I also enjoy playing the piano, playing board games, reading, and spending time with my chunky black cat, Hallow.
 
 - name: "Jonas Reger"
   netid: "wreger2"
