--- a/_data/info.yml
+++ b/_data/info.yml
@@ -1,7 +1,7 @@
 # Semester Information (Changes from semester to semester)
 
 # Weekly Announcements
-announcements: >-
+announcements: 
   <h2>Weekly Announcements</h2>
   <div class="sub-heading-underline" style="margin:0 auto 10px auto; width: 24%;"></div>
 
