fixed typo in info.yml line 6, and added kfindley photo

--- a/_data/info.yml
+++ b/_data/info.yml
@@ -1,7 +1,7 @@
 # Semester Information (Changes from semester to semester)
 
 # Weekly Announcements
-aannouncements: >-
+announcements: >-
   <h2>Weekly Announcements</h2>
   <div class="sub-heading-underline" style="margin:0 auto 10px auto; width: 24%;"></div>
   <p>
