--- a/_data/info.yml
+++ b/_data/info.yml
@@ -5,10 +5,12 @@ announcements: >-
   <h2>Weekly Announcements</h2>
   <div class="sub-heading-underline" style="margin:0 auto 10px auto; width: 24%;"></div>
   <p>
-  Welcome to Stat 100!  All students (both online and in person) should purchase the
-  book STAT 100 Incomplete Lecture Notes by Ellen Fireman, Karle Flanagan, and John Marden.
-  Either the Fall 2019 or Spring 2020 version will work!  It is available at the Illini Union
-  bookstore for about $35. You will be using this throughout the entire semester :)
+  Stat 100 Exam 1 is Wednesday February 12th from 7-8:30pm. Locations will be posted ASAP!
+  <br><br>If you'd like to take the conflict at 4:30pm that day, sign up on 
+  <a href= "lon-capa.illinois.edu"> Lon Capa </a> by Friday 2/7 at 11:59pm.
+  <br><br> The best way to study is to do the 
+  <a href= "{{site.baseurl }}/pages/practice_exams.html"> Practice Exams found here</a> as 
+  real exams without peeking at your notes or the key :)
   </p>
 
 # instructors and sections variables dictate content for the course sections info section of the home page, instructor contact information in syllabus, class times info in syllabus, bonus work info in syllabus, and instructor contact links in footer.
