--- a/_data/info.yml
+++ b/_data/info.yml
@@ -4,11 +4,11 @@
 announcements: >-
   <h2>Weekly Announcements</h2>
   <div class="sub-heading-underline" style="margin:0 auto 10px auto; width: 24%;"></div>
-  <p>
+  <p style="text-align:left;">
   Stat 100 Exam 1 is Wednesday February 12th from 7-8:30pm. Locations will be posted ASAP!
-  <br><br>If you'd like to take the conflict at 4:30pm that day, sign up on 
+  * If you'd like to take the conflict at 4:30pm that day, sign up on 
   <a href= "lon-capa.illinois.edu"> Lon Capa </a> by Friday 2/7 at 11:59pm.
-  <br><br> The best way to study is to do the 
+  * The best way to study is to do the 
   <a href= "{{site.baseurl }}/pages/practice_exams.html"> Practice Exams found here</a> as 
   real exams without peeking at your notes or the key :)
   </p>
