--- a/_data/info.yml
+++ b/_data/info.yml
@@ -5,12 +5,14 @@ announcements: >-
   <h2>Weekly Announcements</h2>
   <div class="sub-heading-underline" style="margin:0 auto 10px auto; width: 24%;"></div>
   <p style="text-align:left;">
-  Stat 100 Exam 1 is Wednesday February 12th from 7-8:30pm. Locations will be posted ASAP!
-  * If you'd like to take the conflict at 4:30pm that day, sign up on 
-  <a href= "lon-capa.illinois.edu"> Lon Capa </a> by Friday 2/7 at 11:59pm.
-  * The best way to study is to do the 
+  <ul>
+  <li>Stat 100 Exam 1 is Wednesday February 12th from 7-8:30pm. Locations will be posted ASAP!</li>
+  <li>If you'd like to take the conflict at 4:30pm that day, sign up on 
+  <a href= "lon-capa.illinois.edu"> Lon Capa </a> by Friday 2/7 at 11:59pm.</li>
+  <li>The best way to study is to do the 
   <a href= "{{site.baseurl }}/pages/practice_exams.html"> Practice Exams found here</a> as 
-  real exams without peeking at your notes or the key :)
+  real exams without peeking at your notes or the key &#128522;</li>
+  </ul>
   </p>
 
 # instructors and sections variables dictate content for the course sections info section of the home page, instructor contact information in syllabus, class times info in syllabus, bonus work info in syllabus, and instructor contact links in footer.
