--- a/_data/info.yml
+++ b/_data/info.yml
@@ -8,9 +8,9 @@ announcements: >-
   <ul>
   <li>Stat 100 Exam 1 is Wednesday February 12th from 7-8:30pm. Locations will be posted ASAP!</li>
   <li>If you'd like to take the conflict at 4:30pm that day, sign up on 
-  <a href= "lon-capa.illinois.edu"> Lon Capa </a> by Friday 2/7 at 11:59pm.</li>
+  <a href= "http://lon-capa.illinois.edu" target="_blank" >Lon Capa </a> by Friday 2/7 at 11:59pm.</li>
   <li>The best way to study is to do the 
-  <a href= "{{site.baseurl }}/pages/practice_exams.html"> Practice Exams found here</a> as 
+  <a href= "https://karleflanagan.github.io/stat100S20/pages/practice_exams.html" target="_blank"> Practice Exams found here</a> as 
   real exams without peeking at your notes or the key &#128522;</li>
   </ul>
   </p>
