--- a/_data/info.yml
+++ b/_data/info.yml
@@ -11,7 +11,7 @@ announcements: >-
   <a href= "http://lon-capa.illinois.edu" target="_blank" >Lon Capa </a> by Friday 2/7 at 11:59pm.</li>
   <li>The best way to study is to do the
   <a href= "https://karleflanagan.github.io/stat100S20/pages/practice_exams.html" target="_blank"> Practice Exams found here</a> as
-  real exams without peeking at your notes or the key &#128522; &#xe304; &#127482;&#127480; </li>
+  real exams without peeking at your notes or the key &#128522; &#127799; &#127482;&#127480; </li>
   </ul>
   </p>
 
