--- a/_data/info.yml
+++ b/_data/info.yml
@@ -6,7 +6,8 @@ announcements: >-
   <div class="sub-heading-underline" style="margin:0 auto 10px auto; width: 24%;"></div>
   <p style="text-align:left;">
   <ul>
-  <li>Stat 100 Exam 1 is Wednesday February 12th from 7-8:30pm. Locations are posted <a href= "https://karleflanagan.github.io/stat100S20/pages/exam_schedule.html" target="_blank"> here</a>! &#128221;</li>
+  <li>Stat 100 Exam 1 is Wednesday February 12th from 7-8:30pm. Locations for both
+  online and in-person students are posted <a href= "https://karleflanagan.github.io/stat100S20/pages/exam_schedule.html" target="_blank"> here</a>! &#128221;</li>
   <li>If you'd like to take the conflict at 4:30pm that day, sign up on
   <a href= "http://lon-capa.illinois.edu" target="_blank" >Lon Capa </a> by Friday 2/7 at 11:59pm.</li>
   <li>The best way to study is to do the
