--- a/_data/info.yml
+++ b/_data/info.yml
@@ -75,7 +75,8 @@ exams:
   content: "Chapter 1-Chapter 6 Part 1"
   locations: ""
   show-exams: T
-  conflict: "<i>same day from 4:30-6:00pm</i><br><ul><li>Location for All IN PERSON Students (Sections L1 & L2):
+  conflict: >-
+  "<i>same day from 4:30-6:00pm</i><br><ul><li>Location for All IN PERSON Students (Sections L1 & L2):
     <a href="http://ada.fs.illinois.edu/0034.html" target="_blank">100 Material Science and Engineering Building</a><br><br></li>
     <li>Location for ALL ONLINE Students (Section KF): <a href="http://ada.fs.illinois.edu/0043.html" target="_blank">100 Gregory Hall</a><br></li></ul>"
 
