--- a/_data/info.yml
+++ b/_data/info.yml
@@ -74,7 +74,7 @@ exams:
   locations: ""
   show-exams: T
   conflict: >-
-    <span style = "text-weight:normal"><i>same day from 4:30-6:00pm</i><br><ul><li>Location for All IN PERSON Students (Sections L1 & L2):
+    <span style = "font-weight:normal"><i>same day from 4:30-6:00pm</i><br><ul><li>Location for All IN PERSON Students (Sections L1 & L2):
     <a href="http://ada.fs.illinois.edu/0034.html" target="_blank">100 Material Science and Engineering Building</a><br><br></li>
     <li>Location for ALL ONLINE Students (Section KF): <a href="http://ada.fs.illinois.edu/0043.html" target="_blank">100 Gregory Hall</a><br></li></ul></span>
 
