fixed links for exam keys.

--- a/_data/info.yml
+++ b/_data/info.yml
@@ -70,12 +70,12 @@ exams:
   base-name: "Exam1"
   keys: >-
     <ul>
-    <li><a href="{{ site.baseurl }}/assets/docs/exams/VersionAExam1Key.pdf" target="_blank"></a>Stat Key</li>
+    <li><a href="{{ site.baseurl }}/assets/docs/exams/VersionAExam1Key.pdf" target="_blank">Stat Key</a></li>
     <li><a href="{{ site.baseurl }}/assets/docs/exams/VersionBExam1Key.pdf" target="_blank">Stats Key</a></li>
     <li><a href="{{ site.baseurl }}/assets/docs/exams/VersionCExam1Key.pdf" target="_blank">Statistics Key</a></li>
     <li><a href="{{ site.baseurl }}/assets/docs/exams/VersionDExam1Key.pdf" target="_blank">STAT Key</a></li>
     </ul>
-  date: "Wednesday, February 12th, 2020 (testing message, ignore this)"
+  date: "Wednesday, February 12th, 2020"
   time: "7:00-8:30pm"
   content: "Chapter 1-Chapter 6 Part 1"
   locations: ""
