--- a/_data/info.yml
+++ b/_data/info.yml
@@ -1,4 +1,5 @@
 # Semester Information (Changes from semester to semester)
+# smiley face:
 
 # Weekly Announcements
 announcements: >-
@@ -6,11 +7,7 @@ announcements: >-
   <div class="sub-heading-underline" style="margin:0 auto 10px auto; width: 24%;"></div>
   <p style="text-align:left;">
   <ul>
-  <li>Stat 100 Exam 1 is Wednesday February 12th from 7-8:30pm. Locations for both
-  online and in-person students are posted <a href= "https://karleflanagan.github.io/stat100S20/pages/exam_schedule.html" target="_blank"> here</a>! &#128221;</li>
-  <li>The best way to study is to do the
-  <a href= "https://karleflanagan.github.io/stat100S20/pages/practice_exams.html" target="_blank"> Practice Exams found here</a> as
-  real exams without peeking at your notes or the key &#128522; </li>
+  <li>Remember, we drop the 3 lowest Homework Assignments! So you can miss 3 without penalty! &#128522;</li>
   </ul>
   </p>
 
