--- a/_data/info.yml
+++ b/_data/info.yml
@@ -89,7 +89,7 @@ exams:
   time: "7:00-8:30pm"
   content: "Chapter 6 Part 2-Chapter 12"
   locations: "Same as exam 1"
-  show-exams: F
+  show-exams: T
   conflict: "<i>same day from 4:30-6:00pm</i><br>Location for All Last Names and Sections: TBA<br>"
 
 - name: "Exam 3"
