--- a/_data/info.yml
+++ b/_data/info.yml
@@ -7,10 +7,8 @@ announcements: >-
   <div class="sub-heading-underline" style="margin:0 auto 10px auto; width: 24%;"></div>
   <p style="text-align:left;">
   <ul>
-  <li>Exam 2 is Wednesday March 11th at 7pm <a href="https://karleflanagan.github.io/stat100S20/pages/exam_schedule.html" target="_blank">(click here for locations)</a>! 📝</li>
-  <li>The best way to study is to do the <a href="https://karleflanagan.github.io/stat100S20/pages/practice_exams.html" target="_blank">practice exams</a> as real exams without peeking at the key! 🧮</li>
-  <li>Exam 2 covers Chapters 6-12 📚</li>
-  <li>Office Hours this week are from 2-5pm in 23 Illini Hall on Monday and Tuesday. There will be no office hours Wed-Fri during exam week.</li>
+
+  <li>Since UIUC is <a href="https://massmail.illinois.edu/massmail/1709761.html" target="_blank">now fully online until the end of the semester</a>, click <a href="" target="_blank">here</a> for info on how this affects Stat 100. There are still plenty of ways to get help and we still have office hours (via Zoom!) every day.  We hope you guys are doing well and will miss seeing you in person!  If you have any questions, email Karle at <a href="mailto:stat100flanagan@gmail.com">stat100flanagan@gmail.com</a> or Kelly at <a href="mailto:kfindley@illinois.edu">kfindley@illinois.edu</a>.</li>
   </ul>
   </p>
 
