--- a/_data/info.yml
+++ b/_data/info.yml
@@ -7,6 +7,7 @@ announcements: >-
   <div class="sub-heading-underline" style="margin:0 auto 10px auto; width: 24%;"></div>
   <p style="text-align:left;">
   <ul>
+  <li>Exam 3 Keys are now posted <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank">here</a>.
   <li>Since UIUC is <a href="https://massmail.illinois.edu/massmail/1709761.html" target="_blank">now fully online until the end of the semester</a>, click <a href="https://karleflanagan.github.io/stat100S20/pages/covid19.html" target="_blank">here</a> for info on how this affects Stat 100. There are still plenty of ways to get help and we still have office hours (via Zoom!) every day.  We hope you guys are doing well and will miss seeing you in person!  If you have any questions, email Karle at <a href="mailto:stat100flanagan@gmail.com">stat100flanagan@gmail.com</a> or Kelly at <a href="mailto:kfindley@illinois.edu">kfindley@illinois.edu</a>.</li>
   </ul>
   </p>
@@ -101,7 +102,11 @@ exams:
 
 - name: "Exam 3"
   base-name: "Exam3"
-  keys: ""
+  keys: >-
+    <ul>
+    <li><a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank">STAT Key</a></li>
+    <li><a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank">Stat Key</a></li>
+    </ul>
   date: "Wednesday, April 15th, 2020"
   time: "7:00-8:30pm"
   content: "Chapters 13-19"
