--- a/_data/info.yml
+++ b/_data/info.yml
@@ -106,7 +106,7 @@ exams:
   time: "12:00am-9:00pm"
   content: "Chapters 13-19"
   locations: ""
-  show-exams: F
+  show-exams: T
   conflict: "<i>same day from 4:30-6:00pm</i><br>Location for All Last Names and Sections: TBA<br>"
 
 show-finals: FF
