--- a/_data/info.yml
+++ b/_data/info.yml
@@ -7,7 +7,10 @@ announcements: >-
   <div class="sub-heading-underline" style="margin:0 auto 10px auto; width: 24%;"></div>
   <p style="text-align:left;">
   <ul>
-  <li>Since UIUC is <a href="https://massmail.illinois.edu/massmail/1709761.html" target="_blank">now fully online until the end of the semester</a>, click <a href="https://karleflanagan.github.io/stat100S20/pages/covid19.html" target="_blank">here</a> for info on how this affects Stat 100. There are still plenty of ways to get help and we still have office hours (via Zoom!) every day.  We hope you guys are doing well and will miss seeing you in person!  If you have any questions, email Karle at <a href="mailto:stat100flanagan@gmail.com">stat100flanagan@gmail.com</a> or Kelly at <a href="mailto:kfindley@illinois.edu">kfindley@illinois.edu</a>.</li>
+  <li><b>Reminder:</b> All HW for Stat 100 is due on Reading Day (5/7) at 11:59pm in Lon Capa!</li>
+  <li><b>Reminder:</b> The Stat 100 Final Exam will be available from Friday, May 8th at 12am to Wednesday, May 13th at 9pm.  You can take it any time during that window on Lon Capa.  It is 3 hours long and will cover Chapters 1-24 in the notebook.</li>
+  <li>Check Compass for all course announcements/emails :)</li>
+  <li>Hope you're all staying safe and healthy!  If you have any questions, email Karle at <a href="mailto:stat100flanagan@gmail.com">stat100flanagan@gmail.com</a> or Kelly at <a href="mailto:kfindley@illinois.edu>kfindley@illinois.edu</a>.</li>
   </ul>
   </p>
 
@@ -109,7 +112,7 @@ exams:
   show-exams: T
   conflict: "<i>same day from 4:30-6:00pm</i><br>Location for All Last Names and Sections: TBA<br>"
 
-show-finals: FF
+show-finals: T
 
 # This is for code that builds the practice exams tables.
 exam-years:
