fixed error in announcements

--- a/_data/info.yml
+++ b/_data/info.yml
@@ -10,7 +10,7 @@ announcements: >-
   <li><b>Reminder:</b> All HW for Stat 100 is due on Reading Day (5/7) at 11:59pm in Lon Capa!</li>
   <li><b>Reminder:</b> The Stat 100 Final Exam will be available from Friday, May 8th at 12am to Wednesday, May 13th at 9pm.  You can take it any time during that window on Lon Capa.  It is 3 hours long and will cover Chapters 1-24 in the notebook.</li>
   <li>Check Compass for all course announcements/emails :)</li>
-  <li>Hope you're all staying safe and healthy!  If you have any questions, email Karle at <a href="mailto:stat100flanagan@gmail.com">stat100flanagan@gmail.com</a> or Kelly at <a href="mailto:kfindley@illinois.edu>kfindley@illinois.edu</a>.</li>
+  <li>Hope you're all staying safe and healthy!  If you have any questions, email Karle at <a href="mailto:stat100flanagan@gmail.com">stat100flanagan@gmail.com</a> or Kelly at <a href="mailto:kfindley@illinois.edu">kfindley@illinois.edu</a>.</li>
   </ul>
   </p>
 
