Added redirect button to new fall 2020 site

--- a/_data/info.yml
+++ b/_data/info.yml
@@ -3,16 +3,11 @@
 
 # Weekly Announcements
 announcements: >-
-  <h2>Weekly Announcements</h2>
+  <h2>We have moved!</h2>
   <div class="sub-heading-underline" style="margin:0 auto 10px auto; width: 24%;"></div>
-  <p style="text-align:left;">
-  <ul>
-  <li><b>Reminder:</b> All HW for Stat 100 is due on Reading Day (5/7) at 11:59pm in Lon Capa!</li>
-  <li><b>Reminder:</b> The Stat 100 Final Exam will be available from Friday, May 8th at 12am to Wednesday, May 13th at 9pm.  You can take it any time during that window on Lon Capa.  It is 3 hours long and will cover Chapters 1-24 in the notebook.</li>
-  <li>Check Compass for all course announcements/emails :)</li>
-  <li>Hope you're all staying safe and healthy!  If you have any questions, email Karle at <a href="mailto:stat100flanagan@gmail.com">stat100flanagan@gmail.com</a> or Kelly at <a href="mailto:kfindley@illinois.edu">kfindley@illinois.edu</a>.</li>
-  </ul>
-  </p>
+  <h2>
+    Go to the new Fall 2020 website <a href="https://karleflanagan.github.io/stat100F20/index.html">here</a>
+  </h2>
 
 # instructors and sections variables dictate content for the course sections info section of the home page, instructor contact information in syllabus, class times info in syllabus, bonus work info in syllabus, and instructor contact links in footer.
 # Note: the type attribute of the section variables must either be "In Person" or "Online" (These attribute values are case sensitive).
